Fixing the EDT violation when selecting a tenant to execute DQL (#206)
* Fixing the EDT violation when selecting a tenant to execute DQL

* Fixing linting issues